# antlr4-vba-benchmark

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
data/: specs.bas
grammar/: VBALexer.g4  VBAParser.g4
src/: main.cpp
